--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,7 @@ spring.flyway.baseline-on-migrate=true
 
 # Spring Devtools
 spring.devtools.add-properties=false
+
+# AIs
+gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${GEMINI_API_KEY}
+chatgpt.api.url=https://api.openai.com/v1/chat/completions
