--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,18 @@
 spring.application.name=magic-frige
 
 spring.datasource.url=${DB_URL}
-spring.datasource.driver=org.h2.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
 # Configuracoes JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console
+# spring.h2.console.enabled=true # Remove H2 console
+# spring.h2.console.path=/h2-console # Remove H2 console
 
 # Configurar o flyway
-spring.flyway.enable=true
+spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migrations
 spring.flyway.baseline-on-migrate=true
 
