chore: ajust the files to run with postgresql

--- a/.env-example
+++ b/.env-example
@@ -1,1 +1,4 @@
-GEMINI_API_KEY=AIgaSy2uz0r1jeaQxsG-QEAMJZCWfNS-TaBuZTs
+GEMINI_API_KEY=your_api_key
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=mysecretpassword
+DB_URL=jdbc:postgresql://localhost:5432/my-postgres
