--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,12 @@ spring.application.name=magic-frige
 
 spring.datasource.url=${DB_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
 
 # Configuracoes JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-# spring.h2.console.enabled=true # Remove H2 console
-# spring.h2.console.path=/h2-console # Remove H2 console
 
 # Configurar o flyway
 spring.flyway.enabled=true
