--- a/.env-example
+++ b/.env-example
@@ -1,4 +1,4 @@
 GEMINI_API_KEY=your_api_key
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=mysecretpassword
-DB_URL=jdbc:postgresql://localhost:5432/my-postgres
+DB_URL=jdbc:postgresql://localhost:5432/postgres
