FINALLY; everything is working and updating; from running locally with postgres or via docker

--- a/.env-example
+++ b/.env-example
@@ -1,4 +1,7 @@
-GEMINI_API_KEY=your_api_key
+# Database
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=mysecretpassword
-DB_URL=jdbc:postgresql://localhost:5432/postgres
+DB_URL=jdbc:postgresql://127.0.0.1:5432/postgres
+
+# AI Key
+GEMINI_API_KEY=your_gemini_key_here
